# Content-Manager---AI

./: .env.example  .gitignore  README.md  project-summary.md  pyproject.toml
docs/: agents.md  architecture.md
src/: app.py  config.py
src/agents/: compiler.py  critic.py  extractor.py  indexer.py  strategist.py  writer.py
src/graph/: state.py  workflow.py
src/models/: content.py  strategy.py
src/scripts/: ingest_viral_frameworks.py
src/services/: apify.py  embeddings.py  llm.py  qdrant.py  youtube.py
