[project]
name = "contentbrain"
version = "0.1.0"
description = "Ecosistema de agentes aut贸nomos para automatizar investigaci贸n, planificaci贸n y redacci贸n de contenido"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=2.5.0",
    "fpdf2>=2.8.5",
    "google-genai>=1.63.0",
    "langgraph>=1.0.8",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "openai>=2.21.0",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
    "yt-dlp>=2026.2.4",
]
